Fix overflow issues with drawer

--- a/services/web-client/src/components/Drawer/Drawer.module.scss
+++ b/services/web-client/src/components/Drawer/Drawer.module.scss
@@ -5,8 +5,8 @@
   justify-content: flex-end;
   bottom: 0;
   left: 0;
-  height: 100%;
-  max-height: 100%;
+  height: 100dvh;
+  max-height: 100dvh;
   width: 100%;
   transition:
     transform ease-in-out 250ms,
@@ -63,7 +63,7 @@
   border-radius: 16px 16px 0 0;
   border: 2px solid var(--theme-bg-90);
   width: 100%;
-  padding: 16px;
+  padding: 16px 12px 12px 12px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -74,4 +74,5 @@
 .content {
   height: 100%;
   overflow: auto;
+  padding: 0 4px 4px 4px;
 }
