--- a/services/web-client/src/syles/base.scss
+++ b/services/web-client/src/syles/base.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
 
 :root {
   --theme-bg: rgb(17, 17, 17);
@@ -22,7 +23,7 @@
   }
 
   color-scheme: light dark;
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Quicksand, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -35,15 +36,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Sometype Mono", monospace;
-}
-
 body {
   height: 100dvh;
   min-height: 100dvh;
@@ -51,9 +43,29 @@ body {
 
   #root {
     height: 100%;
+    max-height: 100%;
+    overflow: hidden;
+  }
+
+  #drawer-root {
+    height: 0;
+    max-height: 0;
+    position: relative;
   }
 
   * {
+    font-family: inherit;
     box-sizing: border-box;
+    font-weight: 500;
   }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Sometype Mono", monospace;
+  font-weight: 400;
 }
